vegetable_menu.ui created with toggles, with inline input validation

--- a/Project/ui/logout_menu.ui
+++ b/Project/ui/logout_menu.ui
@@ -123,7 +123,7 @@
                 </font>
               </property>
               <property name="text">
-                <string>Yes, Logout !</string>
+                <string>Yes, Logout</string>
               </property>
             </widget>
           </item>
