--- a/Project/ui/product_menu.ui
+++ b/Project/ui/product_menu.ui
@@ -54,6 +54,167 @@
         </widget>
       </item>
       <item>
+        <widget class="QWidget" name="searchRowWidget" native="true">
+          <property name="visible">
+            <bool>false</bool>
+          </property>
+          <layout class="QHBoxLayout" name="searchRowLayout">
+            <property name="spacing">
+              <number>8</number>
+            </property>
+            <property name="leftMargin">
+              <number>0</number>
+            </property>
+            <property name="topMargin">
+              <number>0</number>
+            </property>
+            <property name="rightMargin">
+              <number>0</number>
+            </property>
+            <property name="bottomMargin">
+              <number>0</number>
+            </property>
+            <item>
+              <widget class="QLabel" name="labelSearchBy">
+                <property name="text">
+                  <string>Search by:</string>
+                </property>
+                <property name="alignment">
+                  <set>Qt::AlignRight|Qt::AlignVCenter</set>
+                </property>
+              </widget>
+            </item>
+            <item>
+              <widget class="QLineEdit" name="searchCodeLineEdit">
+                <property name="placeholderText">
+                  <string>Enter Product Code</string>
+                </property>
+                <property name="clearButtonEnabled">
+                  <bool>true</bool>
+                </property>
+                <property name="toolTip">
+                  <string>Scan or type product code</string>
+                </property>
+              </widget>
+            </item>
+            <item>
+              <widget class="QFrame" name="searchModeFrame">
+                <property name="frameShape">
+                  <enum>QFrame::NoFrame</enum>
+                </property>
+                <property name="frameShadow">
+                  <enum>QFrame::Plain</enum>
+                </property>
+                <layout class="QHBoxLayout" name="searchModeLayout">
+                  <property name="spacing">
+                    <number>6</number>
+                  </property>
+                  <property name="leftMargin">
+                    <number>0</number>
+                  </property>
+                  <property name="topMargin">
+                    <number>0</number>
+                  </property>
+                  <property name="rightMargin">
+                    <number>0</number>
+                  </property>
+                  <property name="bottomMargin">
+                    <number>0</number>
+                  </property>
+                  <item>
+                    <widget class="QLabel" name="lblModeCode">
+                      <property name="text">
+                        <string>Code</string>
+                      </property>
+                      <property name="alignment">
+                        <set>Qt::AlignRight|Qt::AlignVCenter</set>
+                      </property>
+                    </widget>
+                  </item>
+                  <item>
+                    <widget class="QSlider" name="searchModeSlider">
+                      <property name="minimumSize">
+                        <size>
+                          <width>52</width>
+                          <height>20</height>
+                        </size>
+                      </property>
+                      <property name="maximumSize">
+                        <size>
+                          <width>52</width>
+                          <height>20</height>
+                        </size>
+                      </property>
+                      <property name="orientation">
+                        <enum>Qt::Horizontal</enum>
+                      </property>
+                      <property name="minimum">
+                        <number>0</number>
+                      </property>
+                      <property name="maximum">
+                        <number>1</number>
+                      </property>
+                      <property name="singleStep">
+                        <number>1</number>
+                      </property>
+                      <property name="pageStep">
+                        <number>1</number>
+                      </property>
+                      <property name="value">
+                        <number>0</number>
+                      </property>
+                      <property name="tracking">
+                        <bool>false</bool>
+                      </property>
+                      <property name="toolTip">
+                        <string>Toggle search mode (Code | Name)</string>
+                      </property>
+                    </widget>
+                  </item>
+                  <item>
+                    <widget class="QLabel" name="lblModeName">
+                      <property name="text">
+                        <string>Name</string>
+                      </property>
+                      <property name="alignment">
+                        <set>Qt::AlignLeft|Qt::AlignVCenter</set>
+                      </property>
+                    </widget>
+                  </item>
+                </layout>
+              </widget>
+            </item>
+            <item>
+              <widget class="QComboBox" name="searchNameComboBox">
+                <property name="enabled">
+                  <bool>false</bool>
+                </property>
+                <property name="editable">
+                  <bool>true</bool>
+                </property>
+                <property name="insertPolicy">
+                  <enum>QComboBox::NoInsert</enum>
+                </property>
+                <property name="sizeAdjustPolicy">
+                  <enum>QComboBox::AdjustToMinimumContentsLengthWithIcon</enum>
+                </property>
+                <property name="minimumContentsLength">
+                  <number>12</number>
+                </property>
+                <property name="placeholderText">
+                  <string>Enter Product Name</string>
+                </property>
+                <item>
+                  <property name="text">
+                    <string/>
+                  </property>
+                </item>
+              </widget>
+            </item>
+          </layout>
+        </widget>
+      </item>
+      <item>
         <layout class="QFormLayout" name="formLayout">
           <item row="0" column="0">
             <widget class="QLabel" name="productCodeLabel">
@@ -215,6 +376,78 @@
       </item>
     </layout>
   </widget>
+  <tabstops>
+    <tabstop>searchCodeLineEdit</tabstop>
+    <tabstop>searchNameComboBox</tabstop>
+    <tabstop>productCodeLineEdit</tabstop>
+    <tabstop>productNameLineEdit</tabstop>
+    <tabstop>categoryComboBox</tabstop>
+    <tabstop>costPriceLineEdit</tabstop>
+    <tabstop>sellingPriceLineEdit</tabstop>
+    <tabstop>unitComboBox</tabstop>
+    <tabstop>supplierLineEdit</tabstop>
+    <tabstop>lastUpdatedLineEdit</tabstop>
+    <tabstop>okButton</tabstop>
+    <tabstop>cancelButton</tabstop>
+  </tabstops>
   <resources/>
-  <connections/>
+  <connections>
+    <!-- Toggle enable/disable of search inputs using slider (0=Code, 1=Name) -->
+    <connection>
+      <sender>searchModeSlider</sender>
+      <signal>valueChanged(int)</signal>
+      <receiver>searchNameComboBox</receiver>
+      <slot>setEnabled(bool)</slot>
+    </connection>
+    <connection>
+      <sender>searchModeSlider</sender>
+      <signal>valueChanged(int)</signal>
+      <receiver>searchCodeLineEdit</receiver>
+      <slot>setDisabled(bool)</slot>
+    </connection>
+
+    <!-- Show Search row in REMOVE and UPDATE/VIEW, hide in ADD -->
+    <connection>
+      <sender>removeButton</sender>
+      <signal>clicked()</signal>
+      <receiver>searchRowWidget</receiver>
+      <slot>show()</slot>
+      <hints>
+        <hint type="sourcelabel"><x>0</x><y>0</y></hint>
+        <hint type="destinationlabel"><x>0</x><y>0</y></hint>
+      </hints>
+    </connection>
+    <connection>
+      <sender>removeButton</sender>
+      <signal>clicked()</signal>
+      <receiver>searchCodeLineEdit</receiver>
+      <slot>setFocus()</slot>
+    </connection>
+    <connection>
+      <sender>updateButton</sender>
+      <signal>clicked()</signal>
+      <receiver>searchRowWidget</receiver>
+      <slot>show()</slot>
+      <hints>
+        <hint type="sourcelabel"><x>0</x><y>0</y></hint>
+        <hint type="destinationlabel"><x>0</x><y>0</y></hint>
+      </hints>
+    </connection>
+    <connection>
+      <sender>updateButton</sender>
+      <signal>clicked()</signal>
+      <receiver>searchCodeLineEdit</receiver>
+      <slot>setFocus()</slot>
+    </connection>
+    <connection>
+      <sender>addButton</sender>
+      <signal>clicked()</signal>
+      <receiver>searchRowWidget</receiver>
+      <slot>hide()</slot>
+      <hints>
+        <hint type="sourcelabel"><x>0</x><y>0</y></hint>
+        <hint type="destinationlabel"><x>0</x><y>0</y></hint>
+      </hints>
+    </connection>
+  </connections>
 </ui>
