--- a/Project/ui/greeting_menu.ui
+++ b/Project/ui/greeting_menu.ui
@@ -48,6 +48,12 @@
         </widget>
       </item>
       <item>
+        <widget class="QLabel" name="underConstructionLabel">
+          <property name="text"><string>Under Construction</string></property>
+          <property name="alignment"><set>Qt::AlignCenter</set></property>
+        </widget>
+      </item>
+      <item>
         <spacer name="contentSpacer">
           <property name="orientation"><enum>Qt::Vertical</enum></property>
           <property name="sizeType"><enum>QSizePolicy::Expanding</enum></property>
