--- a/Project/ui/logout_menu.ui
+++ b/Project/ui/logout_menu.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
-  <class>LogoutDialog</class>
-  <widget class="QDialog" name="LogoutDialog">
+  <class>LogoutMenuDialog</class>
+  <widget class="QDialog" name="LogoutMenuDialog">
     <property name="geometry">
       <rect>
         <x>0</x>
@@ -26,11 +26,6 @@
             <property name="topMargin"><number>0</number></property>
             <property name="rightMargin"><number>0</number></property>
             <property name="bottomMargin"><number>10</number></property>
-            <item>
-              <widget class="QLabel" name="customTitle">
-                <property name="text"><string>Logout</string></property>
-              </widget>
-            </item>
             <item>
               <spacer name="titleSpacer">
                 <property name="orientation"><enum>Qt::Horizontal</enum></property>
