--- a/Project/ui/logout_menu.ui
+++ b/Project/ui/logout_menu.ui
@@ -10,37 +10,73 @@
         <height>200</height>
       </rect>
     </property>
- 
     <layout class="QVBoxLayout" name="verticalLayout">
-      <property name="leftMargin"><number>10</number></property>
-      <property name="topMargin"><number>0</number></property>
-      <property name="rightMargin"><number>10</number></property>
-      <property name="bottomMargin"><number>10</number></property>
+      <property name="leftMargin">
+        <number>10</number>
+      </property>
+      <property name="topMargin">
+        <number>0</number>
+      </property>
+      <property name="rightMargin">
+        <number>10</number>
+      </property>
+      <property name="bottomMargin">
+        <number>10</number>
+      </property>
       <item>
         <widget class="QFrame" name="customTitleBar">
           <property name="frameShape">
             <enum>QFrame::NoFrame</enum>
           </property>
           <layout class="QHBoxLayout" name="customTitleLayout">
-            <property name="leftMargin"><number>0</number></property>
-            <property name="topMargin"><number>0</number></property>
-            <property name="rightMargin"><number>0</number></property>
-            <property name="bottomMargin"><number>10</number></property>
+            <property name="leftMargin">
+              <number>0</number>
+            </property>
+            <property name="topMargin">
+              <number>0</number>
+            </property>
+            <property name="rightMargin">
+              <number>0</number>
+            </property>
+            <property name="bottomMargin">
+              <number>10</number>
+            </property>
             <item>
               <spacer name="titleSpacer">
-                <property name="orientation"><enum>Qt::Horizontal</enum></property>
+                <property name="orientation">
+                  <enum>Qt::Horizontal</enum>
+                </property>
                 <property name="sizeHint" stdset="0">
-                  <size><width>40</width><height>20</height></size>
+                  <size>
+                    <width>40</width>
+                    <height>20</height>
+                  </size>
                 </property>
               </spacer>
             </item>
             <item alignment="Qt::AlignRight|Qt::AlignTop">
               <widget class="QPushButton" name="customCloseBtn">
-                <property name="text"><string>×</string></property>
-                <property name="minimumSize"><size><width>28</width><height>28</height></size></property>
-                <property name="maximumSize"><size><width>28</width><height>28</height></size></property>
-                <property name="flat"><bool>true</bool></property>
-                <property name="toolTip"><string>Close</string></property>
+                <property name="text">
+                  <string>×</string>
+                </property>
+                <property name="minimumSize">
+                  <size>
+                    <width>28</width>
+                    <height>28</height>
+                  </size>
+                </property>
+                <property name="maximumSize">
+                  <size>
+                    <width>28</width>
+                    <height>28</height>
+                  </size>
+                </property>
+                <property name="flat">
+                  <bool>true</bool>
+                </property>
+                <property name="toolTip">
+                  <string>Close</string>
+                </property>
               </widget>
             </item>
           </layout>
@@ -65,10 +101,17 @@
       </item>
       <item>
         <spacer name="spacingTitleButtons">
-          <property name="orientation"><enum>Qt::Vertical</enum></property>
-          <property name="sizeType"><enum>QSizePolicy::Fixed</enum></property>
+          <property name="orientation">
+            <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeType">
+            <enum>QSizePolicy::Fixed</enum>
+          </property>
           <property name="sizeHint" stdset="0">
-            <size><width>20</width><height>30</height></size>
+            <size>
+              <width>20</width>
+              <height>30</height>
+            </size>
           </property>
         </spacer>
       </item>
@@ -128,4 +171,4 @@
   </widget>
   <resources/>
   <connections/>
-  </ui>
+</ui>
