--- a/Project/ui/vegetable_entry.ui
+++ b/Project/ui/vegetable_entry.ui
@@ -1,234 +1,280 @@
-<?xml version='1.0' encoding='UTF-8'?>
+<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
-  <class>VegetablePanel</class>
-  <widget class="QWidget" name="VegetablePanel">
-    <property name="geometry">
-      <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>1065</width>
-        <height>816</height>
-      </rect>
-    </property>
-    <layout class="QVBoxLayout" name="mainVegetableLayout">
-      <property name="spacing">
-        <number>10</number>
-      </property>
+ <class>vegEntryDialog</class>
+ <widget class="QWidget" name="vegEntryDialog">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>1065</width>
+    <height>500</height>
+   </rect>
+  </property>
+  <layout class="QVBoxLayout" name="mainVegEntryLayout">
+   <property name="spacing">
+    <number>10</number>
+   </property>
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
+   <item>
+    <widget class="QTableWidget" name="vegEntryTable">
+     <property name="editTriggers">
+      <set>QAbstractItemView::NoEditTriggers</set>
+     </property>
+     <property name="alternatingRowColors">
+      <bool>true</bool>
+     </property>
+     <property name="selectionBehavior">
+      <enum>QAbstractItemView::SelectRows</enum>
+     </property>
+     <property name="showGrid">
+      <bool>true</bool>
+     </property>
+     <property name="rowCount">
+      <number>0</number>
+     </property>
+     <property name="columnCount">
+      <number>5</number>
+     </property>
+     <attribute name="verticalHeaderVisible">
+      <bool>false</bool>
+     </attribute>
+     <column/>
+     <column/>
+     <column/>
+     <column/>
+     <column/>
+    </widget>
+   </item>
+   <item>
+    <spacer name="vegEntryHSpacer1">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>10</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item>
+    <widget class="QLabel" name="vegEntryMessage1">
+     <property name="text">
+      <string>Select Vegetable:</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+     <property name="wordWrap">
+      <bool>true</bool>
+     </property>
+     <property name="margin">
+      <number>0</number>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <spacer name="vegEntryHSpacer2">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>10</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item>
+    <widget class="QFrame" name="vegEntryFrame">
+     <property name="frameShape">
+      <enum>QFrame::StyledPanel</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Raised</enum>
+     </property>
+     <layout class="QGridLayout" name="vegEntryGrid">
       <property name="leftMargin">
-        <number>0</number>
+       <number>5</number>
       </property>
       <property name="topMargin">
-        <number>0</number>
+       <number>0</number>
       </property>
       <property name="rightMargin">
-        <number>0</number>
+       <number>5</number>
       </property>
       <property name="bottomMargin">
-        <number>0</number>
+       <number>0</number>
       </property>
-      <item>
-        <widget class="QLabel" name="vegetableLabel">
-          <property name="text">
-            <string>Vegetable Entry</string>
-          </property>
-          <property name="alignment">
-            <set>Qt::AlignCenter</set>
-          </property>
-        </widget>
+      <property name="spacing">
+       <number>10</number>
+      </property>
+      <item row="0" column="0">
+       <widget class="QPushButton" name="btnVeg1">
+        <property name="text">
+         <string>Not Used</string>
+        </property>
+       </widget>
       </item>
-      <item>
-        <widget class="QTableWidget" name="vegetableTable">
-          <property name="editTriggers">
-            <set>QAbstractItemView::NoEditTriggers</set>
-          </property>
-          <property name="alternatingRowColors">
-            <bool>true</bool>
-          </property>
-          <property name="selectionBehavior">
-            <enum>QAbstractItemView::SelectRows</enum>
-          </property>
-          <property name="showGrid">
-            <bool>true</bool>
-          </property>
-          <property name="rowCount">
-            <number>0</number>
-          </property>
-          <property name="columnCount">
-            <number>4</number>
-          </property>
-          <column>
-            <property name="text">
-              <string>No.</string>
-            </property>
-          </column>
-          <column>
-            <property name="text">
-              <string>Item</string>
-            </property>
-          </column>
-          <column>
-            <property name="text">
-              <string>Weight (kg)</string>
-            </property>
-          </column>
-          <column>
-            <property name="text">
-              <string>Total</string>
-            </property>
-          </column>
-        </widget>
+      <item row="0" column="1">
+       <widget class="QPushButton" name="btnVeg2">
+        <property name="text">
+         <string>Not Used</string>
+        </property>
+       </widget>
       </item>
-      <item>
-        <widget class="QFrame" name="keypadFrame">
-          <property name="frameShape">
-            <enum>QFrame::StyledPanel</enum>
-          </property>
-          <property name="frameShadow">
-            <enum>QFrame::Raised</enum>
-          </property>
-          <layout class="QGridLayout" name="vegOptionGrid">
-            <property name="leftMargin">
-              <number>0</number>
-            </property>
-            <property name="topMargin">
-              <number>0</number>
-            </property>
-            <property name="rightMargin">
-              <number>0</number>
-            </property>
-            <property name="bottomMargin">
-              <number>0</number>
-            </property>
-            <property name="spacing">
-              <number>5</number>
-            </property>
-            <item row="0" column="0">
-              <widget class="QPushButton" name="btnVeg1">
-                <property name="text">
-                  <string>Not Used</string>
-                </property>
-              </widget>
-            </item>
-            <item row="0" column="1">
-              <widget class="QPushButton" name="btnVeg2">
-                <property name="text">
-                  <string>Not Used</string>
-                </property>
-              </widget>
-            </item>
-            <item row="0" column="2">
-              <widget class="QPushButton" name="btnVeg3">
-                <property name="text">
-                  <string>Not Used</string>
-                </property>
-              </widget>
-            </item>
-            <item row="0" column="3">
-              <widget class="QPushButton" name="btnVeg4">
-                <property name="text">
-                  <string>Not Used</string>
-                </property>
-              </widget>
-            </item>
-            <item row="1" column="0">
-              <widget class="QPushButton" name="btnVeg5">
-                <property name="text">
-                  <string>Not Used</string>
-                </property>
-              </widget>
-            </item>
-            <item row="1" column="1">
-              <widget class="QPushButton" name="btnVeg6">
-                <property name="text">
-                  <string>Not Used</string>
-                </property>
-              </widget>
-            </item>
-            <item row="1" column="2">
-              <widget class="QPushButton" name="btnVeg7">
-                <property name="text">
-                  <string>Not Used</string>
-                </property>
-              </widget>
-            </item>
-            <item row="1" column="3">
-              <widget class="QPushButton" name="btnVeg8">
-                <property name="text">
-                  <string>Not Used</string>
-                </property>
-              </widget>
-            </item>
-            <item row="2" column="0">
-              <widget class="QPushButton" name="btnVeg9">
-                <property name="text">
-                  <string>Not Used</string>
-                </property>
-              </widget>
-            </item>
-            <item row="2" column="1">
-              <widget class="QPushButton" name="btnVeg10">
-                <property name="text">
-                  <string>Not Used</string>
-                </property>
-              </widget>
-            </item>
-            <item row="2" column="2">
-              <widget class="QPushButton" name="btnVeg11">
-                <property name="text">
-                  <string>Not Used</string>
-                </property>
-              </widget>
-            </item>
-            <item row="2" column="3">
-              <widget class="QPushButton" name="btnVeg12">
-                <property name="text">
-                  <string>Not Used</string>
-                </property>
-              </widget>
-            </item>
-            <item row="3" column="0">
-              <widget class="QPushButton" name="btnVeg13">
-                <property name="text">
-                  <string>Not Used</string>
-                </property>
-              </widget>
-            </item>
-            <item row="3" column="1">
-              <widget class="QPushButton" name="btnVeg14">
-                <property name="text">
-                  <string>Not Used</string>
-                </property>
-              </widget>
-            </item>
-            <item row="3" column="2">
-              <widget class="QPushButton" name="btnVegOk">
-                <property name="text">
-                  <string>OK</string>
-                </property>
-              </widget>
-            </item>
-            <item row="3" column="3">
-              <widget class="QPushButton" name="btnVegCancel">
-                <property name="text">
-                  <string>CANCEL</string>
-                </property>
-              </widget>
-            </item>
-          </layout>
-        </widget>
+      <item row="0" column="2">
+       <widget class="QPushButton" name="btnVeg3">
+        <property name="text">
+         <string>Not Used</string>
+        </property>
+       </widget>
       </item>
-      <item>
-        <widget class="QLabel" name="messageLabel">
-          <property name="text">
-            <string>Select a vegetable.</string>
-          </property>
-          <property name="wordWrap">
-            <bool>true</bool>
-          </property>
-        </widget>
+      <item row="0" column="3">
+       <widget class="QPushButton" name="btnVeg4">
+        <property name="text">
+         <string>Not Used</string>
+        </property>
+       </widget>
       </item>
-    </layout>
-  </widget>
-  <resources/>
-  <connections/>
+      <item row="1" column="0">
+       <widget class="QPushButton" name="btnVeg5">
+        <property name="text">
+         <string>Not Used</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QPushButton" name="btnVeg6">
+        <property name="text">
+         <string>Not Used</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="2">
+       <widget class="QPushButton" name="btnVeg7">
+        <property name="text">
+         <string>Not Used</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="3">
+       <widget class="QPushButton" name="btnVeg8">
+        <property name="text">
+         <string>Not Used</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QPushButton" name="btnVeg9">
+        <property name="text">
+         <string>Not Used</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QPushButton" name="btnVeg10">
+        <property name="text">
+         <string>Not Used</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="2">
+       <widget class="QPushButton" name="btnVeg11">
+        <property name="text">
+         <string>Not Used</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="3">
+       <widget class="QPushButton" name="btnVeg12">
+        <property name="text">
+         <string>Not Used</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0">
+       <widget class="QPushButton" name="btnVeg13">
+        <property name="text">
+         <string>Not Used</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="1">
+       <widget class="QPushButton" name="btnVeg14">
+        <property name="text">
+         <string>Not Used</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="2">
+       <widget class="QPushButton" name="btnVegOk">
+        <property name="text">
+         <string>OK</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="3">
+       <widget class="QPushButton" name="btnVegCancel">
+        <property name="text">
+         <string>CANCEL ALL</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <spacer name="vegEntryHSpacer3">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>10</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item>
+    <widget class="QLabel" name="vegEntryMessage2">
+     <property name="text">
+      <string>Place vegetable on the scale ...</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <spacer name="vegEntryHSpacer4">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>10</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+  </layout>
+ </widget>
+ <resources/>
+ <connections/>
 </ui>
